Disclaimer padding issues resolved on mobile

--- a/site.css
+++ b/site.css
@@ -163,7 +163,7 @@ html {
 }
 @media only screen and (max-width: 700px) {
 	ul.disclaimer {
-    	flex-direction: column;
+    	font-size: 0.75em;
 	}
 	.customer-header img {
 		display: none !important;
@@ -174,6 +174,10 @@ html {
 	.custom-header {
 	    justify-content: flex-start;
 	    align-items: center;
+	}
+	ul.disclaimer li {
+	    margin-right: 0.5em;
+	    margin-left: 0.5em;
 	}
 	.custom-header h1 {
 		display: block !important;
